# airflow_curso_hands_on_intro

./: airflow.cfg  pyproject.toml
.astro/: config.yaml
dags/: consumer.py  group_dag.py  producer.py  user_processing.py
dags/groups/: group_downloads.py  group_transforms.py
dags/subdagas/: subdag_downloads.py  subdag_transforms.py
